# escher

./: .babelrc  .gitignore  .ignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Gruntfile.js  INSTALL  LICENSE  LOCAL_RUN_AND_DEPLOY.md  README.md  RELEASE.md  TAGS  WEBSITE_MERGE  appveyor.yml  build.sh  canvas.html  canvas.js  csv_to_json.py  deploy-template.html  escher.1.0.dev.js  escher.1.0.dev.min.js  escher.js  escher.min.js  exportsvg.js  flux-wt-pFBA.csv  flux.json  generate_map_json.py  index-test.html  index.html  index.json  main.js  map.css  map.js  map.json  map_spec.json  (+23 more)
builder/: builder.js  index.html  map.css
py/: MANIFEST.in  README.md  escher.json  jupyter-escher.json  pyproject.toml  requirements.txt  setup.py  tox.ini
py/escher/: __init__.py  convert_map.py  escape.py  generate_index.py  package-lock.json  package.json  plots.py  quick_server.py  server.py  static_site.py  urls.py  util.py  validate.py  version.py  widget.py
py/escher/example_data/: gene_data_names_iJO1366.json  make_data.py
py/escher/static/: escher-widget.js  escher.css  escher.min.js  escher.min.js.map  extension.js  package.json
py/escher/static/escher/: builder-embed.css  builder.min.css  escher.js  escher.js.map  escher.min.js  escher.min.js.map
py/escher/static/homepage/: main.css  main.js
py/escher/templates/: content.html  homepage.html  standalone.html
py/escher/tests/: test_convert_map.py  test_generate_index.py  test_plots.py  test_server.py  test_urls.py  test_utils.py  test_validate.py
(+602 files in other folders)
